web server flask done
there is a compiling exe issue

--- a/web-interface/templates/index.html
+++ b/web-interface/templates/index.html
@@ -92,8 +92,10 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="zoom-in" data-aos-delay="200">
             <div class="content">
               <h3>Upload the two files with DNAs</h3>
-              <form action="upload.php" method="post" enctype="multipart/form-data">
-                <input type="file" name="fileToUpload" id="fileToUpload" class="form-control form-control-lg">
+              <form  method="post" enctype="multipart/form-data">
+                <input type="file" name="file1ToUpload" id="file1ToUpload" class="form-control form-control-lg">
+                <br>
+                <input type="file" name="file2ToUpload" id="file2ToUpload" class="form-control form-control-lg">
                 <br>
                 <input type="submit" value="Upload files" name="submit" class="btn btn-primary btn-lg">
               </form>
