--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -91,18 +91,41 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="zoom-in" data-aos-delay="200">
             <div class="content">
               <h3>Upload the two files with DNAs</h3>
-              <form method="post" enctype="multipart/form-data" onsubmit="return control()">
+              <form method="post" enctype="multipart/form-data" onsubmit="return control()" name="form-name" value="form1">
                 <input type="file" name="file1ToUpload" id="file1ToUpload" class="form-control form-control-lg">
                 <br>
                 <input type="file" name="file2ToUpload" id="file2ToUpload" class="form-control form-control-lg">
                 <br>
-                <input type="submit" value="Compute" name="submit" class="btn btn-primary btn-lg">
+                <input type="submit" value="Compute" name="compute" class="btn btn-primary btn-lg">
               </form>
             </div>
           </div>
         </div>
       </div>
     </section><!-- End computing Section -->
+
+    <!-- ======= Results Section ======= -->
+    <section id="results" class="results">
+      <div class="container" data-aos="fade-right">
+        <header class="section-header">
+          <h2>DNA substring matching</h2>
+          <h1>Retrieve your files</h1>
+        </header>
+
+        <div class="row gx-0 justify-content-center">
+          <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-right" data-aos-delay="200">
+            <div class="content">
+              <h3>Insert the ID of your result</h3>
+              <form method="post" enctype="multipart/form-data" onsubmit="return controlID()" name="form-name" value="form2">
+                <input type="text" name="resultID" id="resultID" class="form-control form-control-lg">
+                <br>
+                <input type="submit" value="Get" name="get" class="btn btn-primary btn-lg">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Results Section -->
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
