--- a/web-interface/assets/css/style.css
+++ b/web-interface/assets/css/style.css
@@ -24,6 +24,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Nunito", sans-serif;
 }
 
+input{
+  text-align: center;
+}
+
 /*--------------------------------------------------------------
 # Sections
 --------------------------------------------------------------*/
